; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread_policy.c_thread_set_exec_promotion.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread_policy.c_thread_set_exec_promotion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TH_SFLAG_EXEC_PROMOTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @thread_set_exec_promotion(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 (...) @splsched()
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @thread_lock(i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @TH_SFLAG_EXEC_PROMOTED, align 4
  %9 = call i32 @sched_thread_promote_reason(i32 %7, i32 %8, i32 0)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @thread_unlock(i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @splx(i32 %12)
  ret void
}

declare dso_local i32 @splsched(...) #1

declare dso_local i32 @thread_lock(i32) #1

declare dso_local i32 @sched_thread_promote_reason(i32, i32, i32) #1

declare dso_local i32 @thread_unlock(i32) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
